02_gitops/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
