02_gitops/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: fabric-permissive
  namespace: fabric
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  mtls:
    mode: PERMISSIVE
