02_gitops/istio/kiali-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali-np
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kiali
  ports:
    - port: 20001
      targetPort: 20001
      nodePort: 30088
