02_gitops/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: shalm-gateway
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
